# zksync-error

./: .gitignore  404.html  ARCHITECTURE.md  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json  zksync-root.json
.github/workflows/: publish-zksync-error-docs.yml  publish.yml  publish_errors.yml  test.yml
crates/zksync-error-codegen/: Cargo.toml
crates/zksync-error-codegen-cli/: Cargo.toml
crates/zksync-error-codegen-cli/src/: arguments.rs  error.rs  main.rs
crates/zksync-error-codegen-cli/src/arguments/: conversion.rs  mod.rs  mode.rs
crates/zksync-error-codegen/doc_templates/mdbook/: SUMMARY.md  component.md  domain.md  error.md
crates/zksync-error-codegen/src/: arguments.rs  description.rs  error.rs  lib.rs
crates/zksync-error-codegen/src/backend/: arguments.rs  mod.rs
crates/zksync-error-codegen/src/backend/mdbook/: config.rs  error.rs  mod.rs
crates/zksync-error-codegen/src/backend/rust/: config.rs  mod.rs
crates/zksync-error-codegen/src/backend/rust/files/: cargo.rs  documentation.rs  identifier.rs  kind.rs  lib.rs  packed.rs  serialized.rs  untyped.rs
crates/zksync-error-codegen/src/backend/rust/files/error/: definitions.rs  domains.rs  mod_file.rs
crates/zksync-error-codegen/src/backend/rust/util/: codegen.rs
crates/zksync-error-codegen/src/codegen/: mod.rs
crates/zksync-error-codegen/src/codegen/mdbook/: mod.rs
crates/zksync-error-codegen/src/codegen/rust/: error.rs  mod.rs
crates/zksync-error-codegen/src/codegen/rust/files/: kind.rs  lib.rs  serialized.rs
crates/zksync-error-codegen/src/codegen/rust/files/error/: domains.rs  mod_file.rs
crates/zksync-error-codegen/src/description/: accessors.rs  adapters.rs  binding.rs  display.rs  error.rs  mod.rs
crates/zksync-error-codegen/src/description/merge/: error.rs  mod.rs
crates/zksync-error-codegen/src/description/normalization/: binding.rs  mod.rs  normalizable.rs
crates/zksync-error-codegen/src/description/parsers/: link.rs
crates/zksync-error-codegen/src/loader/: cargo.rs  error.rs  fetch.rs  link.rs  mod.rs
crates/zksync-error-codegen/src/loader/builder/: context.rs  error.rs  mod.rs
crates/zksync-error-codegen/src/loader/dependency_lock/: error.rs  mod.rs
crates/zksync-error-codegen/src/loader/resolution/: context.rs  error.rs  mod.rs  overrides.rs
crates/zksync-error-codegen/src/logging/: mod.rs
crates/zksync-error-codegen/src/util/: io.rs  mod.rs  printing.rs
crates/zksync-error-codegen/tests/loader/: basic_functionality.rs  build_mode_integration.rs  build_modes.rs  common.rs  dependencies.rs  error_handling.rs  mod.rs  override_lock_behavior.rs  override_lock_behavior_simple.rs  overrides_and_advanced.rs
crates/zksync-error-description/: Cargo.toml
crates/zksync-error-description/src/adapter/: mod.rs
crates/zksync-error-description/src/model/: mod.rs
crates/zksync-error-model/: Cargo.toml
crates/zksync-error-model/src/: error.rs  identifier.rs  lib.rs  validator.rs
crates/zksync-error-model/src/inner/: component.rs  domain.rs  error.rs  mod.rs
crates/zksync-error-model/src/link/: error.rs  github.rs  mod.rs
crates/zksync-error-model/src/merger/: error.rs  mod.rs
crates/zksync-error-model/src/unpacked/: mod.rs
descriptions/: zksync-root.json
descriptions/types/: common.json  zksync-specific.json
doc-library/: 01-introduction.html  02-getting-started.html  404.html  print.html  searchindex.js  searchindex.json
doc-library/backend/mdbook/: 01-overview.html
doc-library/backend/rust/: 01-overview.html  02-errors.html  03-marshaling.html  04-debugging.html
doc-library/description/: 01-overview.html  02-file-types.html  03-types.html  04-domains.html  05-components.html  06-errors.html  07-links.html
doc-library/guides/: 01-migrating-rust.html
doc-library/implementation/: 01-architecture.html  02-models.html
doc-library/interfaces/: 01-command-line-interface.html  02-library-interface.html  03-library-interface.html
docs/: README.md  book.toml
docs/src/: 01-introduction.md  02-getting-started.md  06-error-description.md  07-links.md  SUMMARY.md
docs/src/description/: 01-overview.md  02-file-types.md  03-domains.md  03-types.md  05-components.md  06-errors.md  07-links.md
docs/src/guides/: 01-migrating-rust.md
docs/src/interfaces/: 02-library-interface.md  03-library-interface.md
domains/AnvilZKsync/: index.html
domains/AnvilZKsync/AnvilEnvironment/: GenericError.html  InvalidArguments.html  LogFileAccessFailed.html  LogFileWriteFailed.html  ServerStartupFailed.html  index.html
domains/AnvilZKsync/AnvilGeneric/: GenericError.html  index.html
domains/AnvilZKsync/AnvilNode/: GenericError.html  SerializationError.html  TimestampBackwardsError.html  TransactionGasEstimationFailed.html  TransactionHalt.html  TransactionValidationFailed.html  index.html
domains/AnvilZKsync/GasEstimation/: ExceedsBlockGasLimit.html  ExceedsLimitForPublishedPubdata.html  GenericError.html  TransactionAlwaysHalts.html  TransactionAlwaysReverts.html  TransactionHalt.html  TransactionRevert.html  index.html
domains/AnvilZKsync/Halt/: BootloaderOutOfGas.html  FailedBlockTimestampAssertion.html  FailedToAppendTransactionToL2Block.html  FailedToChargeFee.html  GenericError.html  (+18 more)
domains/Compiler/: index.html
domains/Core/: index.html
domains/Foundry/: index.html
domains/Hardhat/: index.html
(+52 files in other folders)
