[package]
name = "zksync-error-codegen-cli"
description = "CLI for zksync-error-codegen"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]

#########################
# External dependencies #
#########################

serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true

#########################
# Local dependencies    #
#########################

zksync-error-codegen.workspace = true
