[package]
name = "zksync-error-codegen"
description = "generate Rust, Typescript code to describe and handle errors and Markdown documentation for them."
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]

#########################
# External dependencies #
#########################

const_format.workspace = true
derive_more.workspace = true
include_dir.workspace = true
maplit.workspace = true
proc-macro2.workspace = true
quote.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rustfmt-wrapper.workspace = true
serde = { workspace = true, features = [ "rc" ] }
serde_json.workspace = true
serde_json_path_to_error.workspace = true
strum.workspace = true
strum_macros.workspace = true
tera.workspace = true
thiserror.workspace = true


#########################
# Local dependencies    #
#########################

zksync-error-model.workspace = true
zksync-error-description.workspace = true

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["reqwest-default-tls"]
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-native-tls = ["reqwest/native-tls"]
reqwest-rustls-tls = ["reqwest/rustls-tls"]
