[package]
name = "zksync-error-description"
description = "Exposes a public model of error hierarchy for the generated crate `zksync-error`, which depend on this crate."

authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
# This crate `zksync-error-description` exposes a public model of error
# hierarchy, available for the generated crate `zksync-error`
#
# The other crate `zksync-error-model` defines an internal model of error
# hierarchy, used by `zksync-error-codegen`.
#
# Enable the feature `with_adapter` only for `zksync-error-codegen`.
# It exposes a converter from the internal model format (used by
# `zksync-error-codegen`) to the user-facing model (used by generated code in
# `zksync-error`).
#
with_adapter = [ "dep:zksync-error-model" ]


[dependencies]

#########################
# External dependencies #
#########################

serde.workspace = true
serde_json.workspace = true

#########################
# Local dependencies    #
#########################

zksync-error-model = { path = "../zksync-error-model", optional = true }
