[package]
name = "zksync-error-model"
description = "Internal model of error hierarchy used by `zksync-error-codegen`, plus utility features."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]

derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vector-map.workspace = true
