[package]
name = "zksync-error-model"
description = "Internal model of error hierarchy used by `zksync-error-codegen`, plus utility features."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]

const_format.workspace = true
derive_more.workspace = true
serde.workspace = true
thiserror.workspace = true
